--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1: Worldwide Wide Web</title>
+    <title>Project 1 Worldwide Wide Web</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section>
-            <h2>Welcome to the World Wide Web Research</h2>
+            <h2>Welcome to the Project World Wide Web Research</h2>
             <p>The World Wide Web (WWW) has evolved from a simple text-based repository to an interactive and dynamic digital platform. This website explores its history, the evolution of HTML, and its impact on modern web technologies.</p>
             <h3>Key Terms:</h3>
             <ul>
@@ -51,7 +51,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Diana Salazar - IT 3203</p>
+        <p>&copy; KSU 2025 - Diana Salazar - IT 3203</p>
     </footer>
 </body>
 </html>
